engines/ep/src/kv_bucket.cc
@@ -1395,24 +1395,24 @@ GetValue KVBucket::getInternal(const DocKey& key,
 GetValue KVBucket::getRandomKey() {
     VBucketMap::id_type max = vbMap.getSize();
 
-    const long start = random() % max;
+    const long start = getRandom() % max;
     long curr = start;
     std::unique_ptr<Item> itm;
 
     while (itm == NULL) {
         VBucketPtr vb = getVBucket(curr++);
         while (!vb || vb->getState() != vbucket_state_active) {
-            if (curr == start) {
-                return GetValue(NULL, ENGINE_KEY_ENOENT);
-            }
             if (curr == max) {
                 curr = 0;
+            }
+            if (curr == start) {
+                return GetValue(NULL, ENGINE_KEY_ENOENT);
             }
 
             vb = getVBucket(curr++);
         }
 
-        if ((itm = vb->ht.getRandomKey(random()))) {
+        if ((itm = vb->ht.getRandomKey(getRandom()))) {
             GetValue rv(std::move(itm), ENGINE_SUCCESS);
             return rv;
         }
